# learning-log-generator

./: .gitignore  pyproject.toml
data/logs/: learning_log05-12-2026.md  learning_log05-13-2026.md  learning_log05-14-2026.md  learning_log05-16-2026.md
docs/: notes.md
src/learning_log_generator/: config.py  learning_log_generator.py  main.py
src/learning_log_generator/templates/: learning_log_template.md
